Ensure consistent wrapping between main and header

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,7 +2,7 @@
 
 .main-wrapper {
   margin: 1rem auto;
-  max-width: calc(100% - 1rem * 2);
+  padding: 0 1rem;
 }
 
 /* Header */
@@ -14,7 +14,6 @@
   margin: 0 auto;
   align-items: center;
   gap: 1rem;
-  max-width: 100%;
 }
 
 .logo {
@@ -51,12 +50,12 @@
 
 @media (min-width: 640px) {
   .header-wrapper {
-    max-width: calc(100% - 1rem * 2);
+    width: calc(100% - 1rem * 2);
   }
 
   .main-wrapper {
     margin: 2rem auto;
-    max-width: calc(100% - 2rem * 2);
+    width: calc(100% - 1rem * 2);
   }
 
   .footer {
@@ -66,44 +65,42 @@
 
 @media (min-width: 768px) {
   .header-wrapper {
-    max-width: calc(100% - 2rem * 2);
+    width: calc(100% - 2rem * 2);
   }
 
   .main-wrapper {
     margin: 3rem auto;
-    max-width: calc(100% - 3rem * 2);
+    width: calc(100% - 2rem * 2);
   }
 }
 
 @media (min-width: 1024px) {
   .header-wrapper {
-    max-width: calc(100% - 5rem * 2);
+    width: calc(100% - 6rem * 2);
   }
 
   .main-wrapper {
     margin: 4rem auto;
-    max-width: calc(100% - 6rem * 2);
+    width: calc(100% - 6rem * 2);
   }
 }
 
 @media (min-width: 1280px) {
   .header-wrapper {
-    max-width: calc(100% - 7rem * 2);
+    width: calc(100% - 8rem * 2);
   }
 
   .main-wrapper {
-    margin: 4rem auto;
-    max-width: calc(100% - 8rem * 2);
+    width: calc(100% - 8rem * 2);
   }
 }
 
 @media (min-width: 1536px) {
   .header-wrapper {
-    max-width: calc(1773px - 16rem * 2);
+    width: calc(1773px - 17rem * 2);
   }
 
   .main-wrapper {
-    margin: 4rem auto;
-    max-width: calc(1773px - 16rem * 2);
+    width: calc(1773px - 16rem * 2);
   }
 }
